[package]
name = "java-method-finder"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to find method invocations in Java bytecode"
license = "MIT OR Apache-2.0"

[[bin]]
name = "jmf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cafebabe = "0.8"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
rayon = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
